--- a/views/pages/animals.ejs
+++ b/views/pages/animals.ejs
@@ -15,6 +15,9 @@
             </header>
           </div>
     </header>
-    <div class="main-content">Welcome Home! </div>
+
+    <div class="main-content">
+        <p>These are animals</p>
+    </div>
 </body>
 </html>
