--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,14 +7,17 @@
             <header class="menu">
               <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Mammals</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Reptiles</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Birds</a></li>
               </ul>
             </header>
           </div>
     </header>
+    <div class="wrapper">
+         <div class="sidebar"></div>
     <div class="main-content">Welcome Home! </div>
+ 
+    </div>
 </body>
 </html>
