--- a/views/pages/animals.ejs
+++ b/views/pages/animals.ejs
@@ -7,10 +7,9 @@
             <header class="menu">
               <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Mammals</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Reptiles</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Birds</a></li>
               </ul>
             </header>
           </div>
