installed the old JS logic and addapted it to the ejs structure - routes all working fine

--- a/views/partials/birdshead.ejs
+++ b/views/partials/birdshead.ejs
@@ -4,6 +4,6 @@
     <title>Da Aussi Zoo</title>
     <link rel="stylesheet" href="/style/main.css">
         <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/oldzoo.js" defer></script>
- 
+    <script src="/js/oldbirds.js" defer></script>
+
   </head>
