--- a/views/partials/reptileshead.ejs
+++ b/views/partials/reptileshead.ejs
@@ -2,8 +2,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Da Aussi Zoo</title>
-    <link rel="stylesheet" href="/style/main.css">
+  <link rel="stylesheet" href="/style/main.css">
         <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/oldzoo.js" defer></script>
+    <script src="/js/oldreptiles.js" defer></script>
  
   </head>
