--- a/public/style/main.css
+++ b/public/style/main.css
@@ -44,3 +44,12 @@ header {
     background-color: #FE938C;
     height: 100%;
 }
+
+  .animal-img {
+    padding: 15px;
+
+    height: auto;
+    width: 100%;
+    margin: 0;
+    align-self: center;
+  }
