--- a/views/pages/mammals.ejs
+++ b/views/pages/mammals.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("../partials/head") %>
+<%- include("../partials/mammalshead") %>
 <body>
     <header>
         <div class="nav-container">
             <header class="menu">
               <ul class="nav-menu">
-                <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+                   <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="/animals/mammals" class="nav-link">Mammals</a></li>
                 <li class="nav-item"><a href="/animals/reptiles"   class="nav-link">Reptiles</a></li>
                 <li class="nav-item"><a href="/animals/birds" class="nav-link">Birds</a></li>
