--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,7 @@
     <div class="wrapper">
          <div class="sidebar"></div>
     <div class="main-content">Welcome Home! </div>
- 
     </div>
+    <%- include('../partials/footer') %>
 </body>
 </html>
