--- a/views/pages/animals.ejs
+++ b/views/pages/animals.ejs
@@ -18,5 +18,6 @@
     <div class="main-content">
         <p>These are animals</p>
     </div>
+    <%- include('../partials/footer') %>
 </body>
 </html>
