--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,8 @@
     <div class="wrapper">
          <div class="sidebar"></div>
     <div class="main-content">Welcome Home! </div>
- 
+    <div id="button" onclick="buttonFunction()">An animal!</div>
+    <div id="#text"></div>
     </div>
 </body>
 </html>
