--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,16 +3,7 @@
 <%- include("../partials/head") %>
 <body>
     <header>
-        <div class="nav-container">
-            <header class="menu">
-              <ul class="nav-menu">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Mammals</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Reptiles</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Birds</a></li>
-              </ul>
-            </header>
-          </div>
+       <%- include("..partial/navigation")%>
     </header>
     <div class="wrapper">
          <div class="sidebar"></div>
