--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,55 +1,64 @@
-* { 
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #EAD2AC;
-    margin: 0;
+  background-color: #ead2ac;
+  margin: 0;
 }
 
-header { 
-    background-color: #9CAFB7;
-    margin: 0;
+header {
+  background-color: #9cafb7;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.logo {
+  padding: 10px;
+  margin: 0;
+  height: 50px;
+  width: auto;
 }
 .nav-menu {
-    margin: 0;
-    display: flex;
-    padding: 10px;
-    justify-content: space-evenly;
-  
- }
+  margin: 0;
+  display: flex;
+  padding: 10px;
+  justify-content: space-evenly;
+}
 
- ul { 
-    list-style-type: none;
- }
+ul {
+  list-style-type: none;
+}
 
- li { 
-    padding: 10px;
- }
+li {
+  padding: 10px;
+}
 
- .wrapper { 
-    height: 100vh;
-    display: flex;
-   
- }
+.wrapper {
+  height: 100vh;
+  display: flex;
+}
 
 .main-content {
-    flex: 3; 
-    background-color: #E6B89C;
-    padding: 20px; 
+  flex: 3;
+  background-color: #e6b89c;
+  padding: 20px;
 }
 
 .sidebar {
-    flex: 1;
-    background-color: #FE938C;
-    height: 100%;
+  flex: 1;
+  background-color: #fe938c;
+  height: 100%;
 }
 
-  .animal-img {
-    padding: 15px;
+.animal-img {
+  padding: 15px;
 
-    height: auto;
-    width: 100%;
-    margin: 0;
-    align-self: center;
-  }
+  height: auto;
+  width: 100%;
+  margin: 0;
+  align-self: center;
+}
