--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("../partials/head") %>
-<body>
+  <%- include("../partials/head") %>
+  <body>
     <header>
-        <div class="nav-container">
-            <header class="menu">
-              <ul class="nav-menu">
-                <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="/animals/mammals" class="nav-link">Mammals</a></li>
-                <li class="nav-item"><a href="/animals/reptiles"   class="nav-link">Reptiles</a></li>
-                <li class="nav-item"><a href="/animals/birds" class="nav-link">Birds</a></li>
-              </ul>
-            </header>
-          </div>
+      <div class="nav-container">
+        <header class="menu">
+          <img
+            class="logo"
+            src="./../../img/logo-green.png"
+            alt="Da Aussi Zoo" />
+          <ul class="nav-menu">
+            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+            <li class="nav-item">
+              <a href="/animals/mammals" class="nav-link">Mammals</a>
+            </li>
+            <li class="nav-item">
+              <a href="/animals/reptiles" class="nav-link">Reptiles</a>
+            </li>
+            <li class="nav-item">
+              <a href="/animals/birds" class="nav-link">Birds</a>
+            </li>
+          </ul>
+        </header>
+      </div>
     </header>
     <div class="wrapper">
-         <div class="sidebar"></div>
-    <div class="main-content">
- <p class="welcome">Welcome to Changemaker´s Australian Animal Portal!</p>
- </div>
+      <div class="sidebar"></div>
+      <div class="main-content">
+        <p class="welcome">
+          Welcome to Changemaker´s Australian Animal Portal!
+        </p>
+      </div>
     </div>
     <%- include('../partials/footer') %>
-</body>
+  </body>
 </html>
