added cursor link to sidebar

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -47,9 +47,12 @@ header {
 
   .animal-img {
     padding: 15px;
-
     height: auto;
     width: 100%;
     margin: 0;
     align-self: center;
+  }
+
+  .animal { 
+    cursor: pointer;
   }
