fixed nav/header partials

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,9 +2,7 @@
 <html lang="en">
 <%- include("../partials/head") %>
 <body>
-    <header>
-       <%- include("..partial/navigation")%>
-    </header>
+    <%- include("../partial/header")  %>
     <div class="wrapper">
          <div class="sidebar"></div>
     <div class="main-content">
