--- a/views/pages/animals.ejs
+++ b/views/pages/animals.ejs
@@ -2,9 +2,7 @@
 <html lang="en">
 <%- include("../partials/head") %>
 <body>
-    <header>
-      <%- include("../partials/navigation")%>
-    </header>
+    <%- include("../partial/header") %>
 
     <div class="main-content">
         <p>These are animals</p>
