--- a/views/pages/birds.ejs
+++ b/views/pages/birds.ejs
@@ -2,18 +2,7 @@
 <html lang="en">
 <%- include("../partials/birdshead") %>
 <body>
-    <header>
-        <div class="nav-container">
-            <header class="menu">
-           <ul class="nav-menu">
-                   <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="/animals/mammals" class="nav-link">Mammals</a></li>
-                <li class="nav-item"><a href="/animals/reptiles"   class="nav-link">Reptiles</a></li>
-                <li class="nav-item"><a href="/animals/birds" class="nav-link">Birds</a></li>
-              </ul>
-            </header>
-          </div>
-    </header>
+   <%- include("../partial/header")  %>
     <div class="wrapper">
          <div class="sidebar"></div>
     <div class="main-content">
