--- a/views/pages/birds.ejs
+++ b/views/pages/birds.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include("../partials/birdshead") %>
 <body>
-   <%- include("../partial/header")  %>
+   <%- include("../partials/header")  %>
     <div class="wrapper">
          <div class="sidebar"></div>
     <div class="main-content">
