--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,8 +1,15 @@
 <div class="nav-container">
-    <ul class="nav-menu">
-      <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-      <li class="nav-item"><a href="/animals/mammals" class="nav-link">Mammals</a></li>
-      <li class="nav-item"><a href="/animals/reptiles"   class="nav-link">Reptiles</a></li>
-      <li class="nav-item"><a href="/animals/birds" class="nav-link">Birds</a></li>
-    </ul>
+  <ul class="nav-menu">
+    <img class="logo" src="./../../img/logo-green.png" alt="Da Aussi Zoo" />
+    <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+    <li class="nav-item">
+      <a href="/animals/mammals" class="nav-link">Mammals</a>
+    </li>
+    <li class="nav-item">
+      <a href="/animals/reptiles" class="nav-link">Reptiles</a>
+    </li>
+    <li class="nav-item">
+      <a href="/animals/birds" class="nav-link">Birds</a>
+    </li>
+  </ul>
 </div>
