--- a/public/style/main.css
+++ b/public/style/main.css
@@ -5,6 +5,9 @@
 body {
     background-color: #EAD2AC;
     margin: 0;
+    min-height:  100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 header { 
@@ -28,7 +31,7 @@ header {
  }
 
  .wrapper { 
-    height: 100vh;
+   
     display: flex;
    
  }
@@ -47,8 +50,8 @@ header {
 
   .animal-img {
     padding: 15px;
-    height: auto;
-    width: 100%;
+    height: 300px;
+    width: auto;
     margin: 0;
     align-self: center;
   }
