--- a/public/style/main.css
+++ b/public/style/main.css
@@ -5,6 +5,9 @@
 body {
   background-color: #ead2ac;
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -38,7 +41,6 @@ li {
 }
 
 .wrapper {
-  height: 100vh;
   display: flex;
 }
 
@@ -56,8 +58,12 @@ li {
 
 .animal-img {
   padding: 15px;
-  height: auto;
-  width: 100%;
+  height: 300px;
+  width: auto;
   margin: 0;
   align-self: center;
+}
+
+.animal {
+  cursor: pointer;
 }
