--- a/views/pages/readmore.ejs
+++ b/views/pages/readmore.ejs
@@ -8,7 +8,9 @@
 <!-- Display details of the selected animal -->
 <% if (selectedAnimal) {  %>
 <h2>Name: <%= selectedAnimal.name %></h2>
+ <img class="animal-img" src="<%= selectedAnimal.smallimg %>">
 <p>Lifespan: <%= selectedAnimal.lifespan %></p>
+<p>Lifespan: <%= selectedAnimal.description %></p>
 <%  } %>
 </body>
 </html>
