--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,7 +2,16 @@
   box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'animalFont';
+    src: url('../style/Animal\ House.otf')  format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
+    font-family: 'animalFont';
+    font-size: 1.3rem;
   background-color: #ead2ac;
   margin: 0;
   min-height: 100vh;
