improved nav style a tiny bit

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -13,10 +13,8 @@ body {
 header {
   align-items: center;
   background-color: #9cafb7;
-  display: flex;
   flex-direction: row;
   margin: 0;
-  justify-content: center;
 }
 
 .logo {
@@ -25,11 +23,38 @@ header {
   height: 50px;
   width: auto;
 }
+
+.nav-container { 
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .nav-menu {
   margin: 0;
   display: flex;
-  padding: 10px;
+  padding: 7px;
   justify-content: space-evenly;
+}
+
+.nav-item {
+  padding: 10px;
+  cursor: pointer;
+  transition: all 0.5s;
+  border: 2px solid transparent;
+  border-radius: 7px;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.nav-item:hover {
+  background-color: #9cafb7;
+  border-color: #7a95a5;
+  border-left: 2px solid transparent; 
+  border-right: 2px solid transparent;
+  transform: scale(1.05);
 }
 
 ul {
@@ -41,8 +66,8 @@ li {
 }
 
 .wrapper {
-  height: 100vh;
   display: flex;
+  height: 100vh;
 }
 
 .main-content {
@@ -57,6 +82,8 @@ li {
   height: 100%;
   flex: 1;
   padding: 20px;
+  border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 .main-content {
@@ -66,6 +93,7 @@ li {
 .sidebar {
   background-color: #fe938c;
   height: auto;
+  margin: 0;
 }
 
 .animal-img {
@@ -78,8 +106,22 @@ li {
 
 .animal {
   cursor: pointer;
+  transition: all 0.5s;
+  padding: 2px;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  margin-bottom: 7px; 
+   border: 2px solid transparent; 
+   border-radius: 7px;
 }
 
+.animal:hover { 
+ background-color: #9cafb7;
+  border-color: #7a95a5; 
+  transform: scale(1.05); 
+
+}
 p.animal {
   font-size: 0.8rem;
 }
