--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,6 +1,8 @@
 <div class="nav-container">
+  <div class="image">      <img class="logo" src="./../../img/logo-green.png" alt="Da Aussi Zoo" /> </div>
+
+  <div class nav-menu-div >
   <ul class="nav-menu">
-    <img class="logo" src="./../../img/logo-green.png" alt="Da Aussi Zoo" />
     <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
     <li class="nav-item">
       <a href="/animals/mammals" class="nav-link">Mammals</a>
@@ -12,4 +14,5 @@
       <a href="/animals/birds" class="nav-link">Birds</a>
     </li>
   </ul>
+  </div>
 </div>
