added footer on readmore and few content + centered

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -74,6 +74,7 @@ li {
   flex: 3;
   background-color: #e6b89c;
   padding: 20px;
+  height: 100vh
 }
 
 .sidebar {
@@ -126,6 +127,16 @@ p.animal {
   font-size: 0.8rem;
 }
 
+.detail-title { 
+  text-align: center;
+}
+
+.detail-content { 
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
 @media (min-width: 768px) {
   .wrapper {
     flex-direction: row;
