--- a/public/style/main.css
+++ b/public/style/main.css
@@ -137,6 +137,13 @@ p.animal {
   flex-direction: column;
   align-items: center;
 }
+
+footer { 
+  min-height: 15vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 @media (min-width: 768px) {
   .wrapper {
     flex-direction: row;
