--- a/views/pages/reptiles.ejs
+++ b/views/pages/reptiles.ejs
@@ -9,5 +9,6 @@
  <p class="welcome">Welcome to Changemaker´s Australian Animal Portal!</p>
  </div>
     </div>
+      <%- include('../partials/footer') %>
 </body>
 </html>
