--- a/views/pages/readmore.ejs
+++ b/views/pages/readmore.ejs
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include("../partials/head") %>
-<body>
+  <%- include("../partials/head") %>
+  <body>
+    <!-- Back to Home button -->
+    <a href="/" class="back-to-home-btn">Back to Home</a>
 
-<h1 class="detail-title">Read More</h1>
+    <h1 class="detail-title">Read More</h1>
 
-<!-- Display details of the selected animal -->
-<% if (selectedAnimal) {  %>
-    <div class="detail-content"> 
-<h2>Name: <%= selectedAnimal.name %></h2>
- <img class="animal-img" src="<%= selectedAnimal.smallimg %>">
-<p>Lifespan: <%= selectedAnimal.lifespan %></p>
-<p>Lifespan: <%= selectedAnimal.description %></p>
- <p>This animal is usually <%= selectedAnimal.length %> </p>
- <p>This animal usually weighs    <%= selectedAnimal.weight %> </p>
- <p>This animal usually lives in <%= selectedAnimal.location %> </p>
- <%  } %>
-    </div> 
-        <%- include('../partials/footer') %>
-</body>
+    <!-- Display details of the selected animal -->
+    <% if (selectedAnimal) { %>
+    <div class="detail-content">
+      <h2>Name: <%= selectedAnimal.name %></h2>
+      <img class="animal-img" src="<%= selectedAnimal.smallimg %>" />
+      <p>Lifespan: <%= selectedAnimal.lifespan %></p>
+      <p>Description: <%= selectedAnimal.description %></p>
+      <p>This animal is usually <%= selectedAnimal.length %></p>
+      <p>This animal usually weighs <%= selectedAnimal.weight %></p>
+      <p>This animal usually lives in <%= selectedAnimal.location %></p>
+      <% } %>
+    </div>
+    <%- include('../partials/footer') %>
+  </body>
 </html>
