--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,15 +2,76 @@
   box-sizing: border-box;
 }
 
+.animal {
+  align-items: center;
+  border: 2px solid transparent;
+  border-radius: 7px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 7px;
+  padding: 2px;
+  transition: all 0.5s;
+}
+
+.animal-img {
+  align-self: center;
+  height: auto;
+  margin: 0;
+  padding: 15px;
+  width: 100%;
+}
+
+.animal:hover {
+  background-color: #9cafb7;
+  border-color: #7a95a5;
+  transform: scale(1.05);
+}
+
+.back-to-home-btn {
+  background-color: #4caf50;
+  border-radius: 5px;
+  color: white;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 0;
+  padding: 10px 20px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.back-to-home-btn:hover {
+  background-color: #45a049;
+}
+
 body {
   background-color: #ead2ac;
+  display: flex;
   flex-direction: column;
   margin: 0;
   min-height: 100vh;
-  display: flex;
 }
 
-header {
+.detail-content {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.detail-title {
+  text-align: center;
+}
+
+footer {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-height: 15vh;
+  margin-top: auto;
+}
+
+.header {
   align-items: center;
   background-color: #9cafb7;
   flex-direction: row;
@@ -18,43 +79,66 @@ header {
 }
 
 .logo {
-  padding: 10px;
-  margin: 0;
   height: 50px;
+  margin: 0;
+  padding: 10px;
   width: auto;
 }
 
-.nav-container { 
-  display: flex;
-  justify-content: space-evenly;
+.main-content {
+  background-color: #e6b89c;
+  flex-grow: 1;
+  flex: 3;
+  overflow-y: auto;
+  padding: 20px;
 }
 
-.nav-menu {
-  margin: 0;
+.nav-container {
   display: flex;
-  padding: 7px;
   justify-content: space-evenly;
 }
 
 .nav-item {
-  padding: 10px;
-  cursor: pointer;
-  transition: all 0.5s;
   border: 2px solid transparent;
   border-radius: 7px;
-}
-
-.nav-link {
-  text-decoration: none;
-  color: #ffffff;
+  cursor: pointer;
+  padding: 10px;
+  transition: all 0.5s;
 }
 
 .nav-item:hover {
   background-color: #9cafb7;
   border-color: #7a95a5;
-  border-left: 2px solid transparent; 
+  border-left: 2px solid transparent;
   border-right: 2px solid transparent;
   transform: scale(1.05);
+}
+
+.nav-link {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0;
+  padding: 7px;
+}
+
+p.animal {
+  font-size: 0.8rem;
+}
+
+.sidebar {
+  background-color: #fe938c;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 8px 16px rgba(0, 0, 0, 0.3);
+  flex-grow: 1;
+  flex: 1;
+  height: 100%;
+  margin: 0;
+  padding: 20px;
 }
 
 ul {
@@ -67,87 +151,9 @@ li {
 
 .wrapper {
   display: flex;
-  flex-grow: 1; 
-}
-
-
-.main-content {
-  flex: 3;
-  background-color: #e6b89c;
-  padding: 20px;
-  flex-grow: 1;
-  overflow-y: auto; 
-}
-
-.sidebar {
-  flex: 1;
-  background-color: #fe938c;
-  height: 100%;
-  flex: 1;
-  padding: 20px;
-  border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 8px 16px rgba(0, 0, 0, 0.3);
-}
-
-.main-content {
-  background-color: #e6b89c;
-}
-
-.sidebar {
-  background-color: #fe938c;
-  height: auto;
-  margin: 0;
   flex-grow: 1;
 }
 
-.animal-img {
-  align-self: center;
-  padding: 15px;
-  height: auto;
-  width: 100%;
-  margin: 0;
-}
-
-.animal {
-  cursor: pointer;
-  transition: all 0.5s;
-  padding: 2px;
-  display: flex;
-  align-items: center; 
-  justify-content: center;
-  margin-bottom: 7px; 
-   border: 2px solid transparent; 
-   border-radius: 7px;
-}
-
-.animal:hover { 
- background-color: #9cafb7;
-  border-color: #7a95a5; 
-  transform: scale(1.05); 
-
-}
-p.animal {
-  font-size: 0.8rem;
-}
-
-.detail-title { 
-  text-align: center;
-}
-
-.detail-content { 
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-footer { 
-  min-height: 15vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-   margin-top: auto; 
-}
 @media (min-width: 768px) {
   .wrapper {
     flex-direction: row;
